Rename objects and routes
