# api.yaml
@@ -10,55 +10,55 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 tags:
-  - name: texts
-    description: Collection of texts
+  - name: manuscripts
+    description: Collection of manuscripts
 paths:
-  /texts:
+  /manuscripts:
     get:
       tags:
-        - texts
-      summary: Get all of the texts
-      description: Returns all of the texts
-      operationId: getTexts
+        - manuscripts
+      summary: Get all of the manuscripts
+      description: Returns all of the manuscripts
+      operationId: getManuscripts
       requestBody:
-        $ref: "#/components/requestBodies/Texts"
+        $ref: "#/components/requestBodies/Manuscripts"
       responses:
         "200":
-          description: Texts have been returned successfully
+          description: Manuscripts have been returned successfully
           content:
             application/json:
               schema:
                 type: object
                 items:
-                  $ref: "#/components/schemas/Texts"
+                  $ref: "#/components/schemas/Manuscripts"
         "400":
           description: Invalid status value
-  "/texts/{id}":
+  "/manuscripts/{id}":
     get:
       tags:
-        - texts
-      summary: Find text by ID
-      description: Returns a single text object
-      operationId: getTextById
+        - manuscripts
+      summary: Find manuscript by ID
+      description: Returns a single manuscript object
+      operationId: getManuscriptById
       parameters:
         - name: id
           in: path
-          description: ID of text to return
+          description: ID of manuscript to return
           required: true
           schema:
             type: integer
             format: int32
       responses:
         "200":
-          description: Text has been returned successfully
+          description: Manuscript has been returned successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Text"
+                $ref: "#/components/schemas/Manuscript"
         "400":
           description: Invalid ID supplied
         "404":
-          description: Text not found
+          description: Manuscript not found
 externalDocs:
   description: Find out more about the project
   url: https://github.com/GiorgiBeriashvili/lovecraft-api
@@ -66,23 +66,23 @@ servers:
   - url: https://localhost:3000/api/v1
 components:
   requestBodies:
-    Texts:
+    Manuscripts:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Texts"
+            $ref: "#/components/schemas/Manuscripts"
     Entry:
       content:
         application/json:
           schema:
             $ref: "#/components/schemas/Entry"
-    Text:
+    Manuscript:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Text"
+            $ref: "#/components/schemas/Manuscript"
   schemas:
-    Texts:
+    Manuscripts:
       type: array
       items:
         $ref: "#/components/schemas/Entry"
@@ -94,7 +94,7 @@ components:
           format: int32
         category:
           type: enum
-          description: The category of the text
+          description: The category of the manuscript
           enum:
             - Fiction
             - Poetry
@@ -104,7 +104,7 @@ components:
           type: string
         description:
           type: string
-    Text:
+    Manuscript:
       type: object
       properties:
         id:
@@ -112,7 +112,7 @@ components:
           format: int32
         category:
           type: enum
-          description: The category of the text
+          description: The category of the manuscript
           enum:
             - Fiction
             - Poetry
