# src/main.rs
@@ -12,16 +12,16 @@ use rustls::{
 use sqlx::SqlitePool;
 use std::{env, fs::File, io::BufReader};
 
-mod texts;
+mod manuscript;
 
 #[get("/")]
 async fn index() -> impl Responder {
     HttpResponse::Ok().body(
-        r#"Please visit the `/api/v1/texts` endpoint for the main content!
+        r#"Please visit the `/api/v1/manuscripts` endpoint for the main content!
 
 Available routes:
-    GET /texts -> array of entry objects consisting of: id, category, title, description
-    GET /texts/{id} -> text object consisting of: id, category, title, content"#,
+    GET /manuscripts -> array of entry objects consisting of: id, category, title, description
+    GET /manuscripts/{id} -> manuscript object consisting of: id, category, title, content"#,
     )
 }
 
@@ -30,12 +30,12 @@ async fn main() -> Result<()> {
     dotenv().ok();
     env_logger::init();
 
-    let mut config = ServerConfig::new(NoClientAuth::new());
-    let cert_file = &mut BufReader::new(File::open(env::var("CERTIFICATE")?)?);
-    let key_file = &mut BufReader::new(File::open(env::var("CERTIFICATE_KEY")?)?);
-    let cert_chain = certs(cert_file).unwrap();
-    let mut keys = rsa_private_keys(key_file).unwrap();
-    config.set_single_cert(cert_chain, keys.remove(0))?;
+    // let mut config = ServerConfig::new(NoClientAuth::new());
+    // let cert_file = &mut BufReader::new(File::open(env::var("CERTIFICATE")?)?);
+    // let key_file = &mut BufReader::new(File::open(env::var("CERTIFICATE_KEY")?)?);
+    // let cert_chain = certs(cert_file).unwrap();
+    // let mut keys = rsa_private_keys(key_file).unwrap();
+    // config.set_single_cert(cert_chain, keys.remove(0))?;
 
     let mut listenfd = ListenFd::from_env();
 
@@ -46,7 +46,7 @@ async fn main() -> Result<()> {
         App::new()
             .data(db_pool.clone())
             .service(index)
-            .configure(texts::init)
+            .configure(manuscript::init)
     });
 
     server = if let Some(listener) = listenfd.take_tcp_listener(0)? {
@@ -55,7 +55,8 @@ async fn main() -> Result<()> {
         let host = env::var("HOST")?;
         let port = env::var("PORT")?;
 
-        server.bind_rustls(format!("{}:{}", host, port), config)?
+        // server.bind_rustls(format!("{}:{}", host, port), config)?
+        server.bind(format!("{}:{}", host, port))?
     };
 
     info!("Starting the server!");
